2.0.1 Release: - Directory selection page (in Move dialog) now scrolls - About page now shows available features (from service info) - File list now supports shift-click! - Fixed bug in ACL removal

--- a/trunk/AtmosJSBrowser/WebContent/css/atmos-browser.css
+++ b/trunk/AtmosJSBrowser/WebContent/css/atmos-browser.css
@@ -59,16 +59,6 @@ table {
 END CSS RESET
 */
 
-ul {
-    list-style: disc;
-    margin: 6px 2px;
-    padding: 2px;
-}
-
-li {
-    margin-left: 16px;
-}
-
 input.longField {
     width: 350px;
 }
@@ -91,6 +81,28 @@ input.longField {
     text-align: center;
 }
 
+#atmosAboutPage .featureList {
+    display: inline-block;
+    width: 210px;
+    margin: 8px 8px 14px 8px;
+    border: 1px solid black;
+    background-color: #fff;
+    padding: 4px;
+    text-align: center;
+    font-size: 10pt;
+}
+
+#atmosAboutPage li {
+    text-align: left;
+    margin: 2px;
+}
+
+#atmosAboutPage .disabledFeature {
+    font-style: italic;
+    text-decoration: line-through;
+    color: #999;
+}
+
 #atmosLicense {
     display: none;
     position: fixed;
@@ -107,6 +119,16 @@ input.longField {
     z-index: 15000;
     padding: 8px;
     font: 11pt arial, sans-serif;
+}
+
+#atmosLicense ul {
+    list-style: disc;
+    margin: 6px 2px;
+    padding: 2px;
+}
+
+#atmosLicense li {
+    margin-left: 16px;
 }
 
 .atmosBrowser {
@@ -602,9 +624,12 @@ input.atmosPropertyValue {
     margin: 0 4px;
     border: 1px solid black;
     padding: 2px 4px;
+    font-size: 13px;
 }
 
-.atmosDirectoryList {
+.atmosDirectoryListContainer {
+    height: 300px;
+    overflow-y: scroll;
     background-color: #fff;
     margin: 5px 10px;
     border: 1px solid black;
